[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/items/grenade.gd" type="Script" id=1]
[ext_resource path="res://textures/items/grenade.png" type="Texture" id=2]
[ext_resource path="res://textures/lights/light.png" type="Texture" id=3]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id=2]
radius = 3.0

[sub_resource type="AtlasTexture" id=3]
region = Rect2( 0, 0, 0, 5 )

[node name="grenade" type="RigidBody2D"]
mass = 0.02
physics_material_override = SubResource( 1 )
linear_damp = 5.0
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Collision"]
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="TimerLight" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Particles" type="CPUParticles2D" parent="."]
emitting = false
amount = 40
lifetime = 0.06
one_shot = true
explosiveness = 1.0
texture = SubResource( 3 )
flag_align_y = true
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 650.0
initial_velocity_random = 0.5
color = Color( 1, 0.811765, 0.368627, 1 )

[node name="ray" type="RayCast2D" parent="."]
enabled = true

[node name="laser" type="Line2D" parent="ray"]
points = PoolVector2Array( 0, 0, 0, 50 )
width = 0.3
default_color = Color( 1, 0, 0, 1 )

[node name="Light2D" type="Light2D" parent="."]
enabled = false
texture = ExtResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerLight" to="." method="_on_TimerLight_timeout"]
